# tauri-rsbuild-template

./: .browserslistrc  .gitignore  README.md  babel.config.json  eslint.config.js  flake.nix  package.json  pnpm-lock.yaml  rsbuild.config.ts  tsconfig.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
