[package]
name = "egpu-manager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "egpu_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = { version = "1.0.98", features = ["backtrace"] }
env = "1.0.1"
env_logger = "0.11.8"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
widestring = "1.2.0"
windows = { version = "0.61.1", features = ["Win32_Devices_DeviceAndDriverInstallation", "Win32_System_SystemServices", "Win32_UI_Shell_PropertiesSystem", "Win32_UI_WindowsAndMessaging"] }

